# Market-Data-Aggregator

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  generate_fake_data.py
src/: main.cpp
src/data_processor/: processor.cpp  processor.hpp
src/file_handler/: reader.cpp  reader.hpp  writer.cpp  writer.hpp
src/models/: market_data.cpp  market_data.hpp
src/utils/: memory_monitor.cpp  memory_monitor.hpp  thread_pool.cpp  thread_pool.hpp
tests/: CMakeLists.txt  test_processor.cpp  test_reader.cpp  test_writer.cpp
